--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ p{ background-color: white ;
     text-align:center;
     border-radius:30px; }
     #in{border: 4px solid;
+        border-color: black;
         width: 200px;
         height:200px;
         font-size: 225px; 
