--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p{ background-color: white ;
     border-radius:30px; }
 
 #lock {border: 4px solid;
+       border-color: black;
     width: 200px;
     height:200px;
     font-size: 225px; 
