--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 Body{
-    background: linear-gradient(skyblue, lightgreen);
+    background: linear-gradient(black, midnightblue);
     background-repeat: no-repeat; 
     background-attachment: fixed;
     background-position: center; 
